3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Changes for CVS:

socket/request.c: Fix bug in map1 command which resulted in it sending
too much data with even maps.  For example, if the client requested
a 16x16 map, the server would effectively send a 17x17 map to the client.
MSW 2001-07-19

+++
Major redo of map code:
1) Remove encounter map support (with the much better random map code,
   I don't see much reason for it)
2) Remove map_ob from map structure, and instead store relevant information
   in map structure itself.  Remove strange meanings (stand_still meaning
   fixed reset time for example)
3) Redo internal structure of map and how information on each space was
   stored - this should make future extensions much easier, as well
   as making debugging easier.
4) Make USE_LIGHTING standard part of game.
5) Redo how lighting objects are handled - instead of making a linked list
   of the light giving objects, at field to mapspace that contains
   lightsource for the space.
6) Rewrite insert_ob_in_map to take optional parameter that determines
   other behaviour.  This replaces insert_ob_in_map_simple.
   Function now does sorting of some objects, so performance for lots of
   spell objects on one space should be much better.
7) Change how multipart objects are saved.  Now only save the head, and
   link in the rest of the parts when map is loaded.  Additional parts
   linked in are put just above floor level when linked in, so things like
   shops won't hide items that someone drops on them.  For monsters, this
   linking shouldn't be a problem - once they start moving, they will get
   relinked as normal (on top).